fix(menu): use <ol> to wrap menu items

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -122,6 +122,7 @@
 
 /* Menu style */
 .menu {
+    padding-left: 0;
     list-style: none;
     display: flex;
     flex-direction: column;
